[refactor] convert get(0) to getFirst() (java version change)